@@ -1,5 +1,6 @@
 package edu.austral.ingsis.math;
 
+import edu.austral.ingsis.math.operators.*;
 import org.junit.Test;
 
 import java.util.Collections;
@@ -17,7 +18,10 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction1() {
-        final List<String> result = Collections.emptyList();
+        Function f1 = new Number(1.0);
+        Function f2 = new Number(6.0);
+        Function f3 = new Sum(f1, f2);
+        final List<String> result = f3.listVariables(List.of());
 
         assertThat(result, empty());
     }
@@ -27,7 +31,10 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction2() {
-        final List<String> result = Collections.emptyList();
+        Function f1 = new Number(12.0);
+        Function f2 = new Variable("div");
+        Function f3 = new Div(f1, f2);
+        final List<String> result = f3.listVariables(List.of());
 
         assertThat(result, containsInAnyOrder("div"));
     }
@@ -37,7 +44,12 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction3() {
-        final List<String> result = Collections.emptyList();
+        Function f1 = new Number(9.0);
+        Function f2 = new Variable("x");
+        Function f3 = new Div(f1, f2);
+        Function f4 = new Variable("y");
+        Function f5 = new Mul(f3, f4);
+        final List<String> result = f5.listVariables(List.of());
 
         assertThat(result, containsInAnyOrder("x", "y"));
     }
@@ -47,7 +59,12 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction4() {
-        final List<String> result = Collections.emptyList();
+        Function f1 = new Number(27.0);
+        Function f2 = new Variable("a");
+        Function f3 = new Div(f1, f2);
+        Function f4 = new Variable("b");
+        Function f5 = new Pow(f3, f4);
+        final List<String> result = f5.listVariables(List.of());
 
         assertThat(result, containsInAnyOrder("a", "b"));
     }
@@ -57,7 +74,12 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction5() {
-        final List<String> result = Collections.emptyList();
+        Function f1 = new Variable("z");
+        Function f2 = new Number(2.0);
+        Function f3 = new Number(1.0);
+        Function f4 = new Div(f3, f2);
+        Function f5 = new Pow(f1, f4);
+        final List<String> result = f5.listVariables(List.of());
 
         assertThat(result, containsInAnyOrder("z"));
     }
@@ -67,7 +89,11 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction6() {
-        final List<String> result = Collections.emptyList();
+        Function f1 = new Variable("value");
+        Function f2 = new Number(8.0);
+        Function f3 = new Abs(f1);
+        Function f4 = new Subt(f3, f2);
+        final List<String> result = f4.listVariables(List.of());
 
         assertThat(result, containsInAnyOrder("value"));
     }
@@ -77,7 +103,11 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction7() {
-        final List<String> result = Collections.emptyList();
+        Function f1 = new Variable("value");
+        Function f2 = new Number(8.0);
+        Function f3 = new Abs(f1);
+        Function f4 = new Subt(f3, f2);
+        final List<String> result = f4.listVariables(List.of());
 
         assertThat(result, containsInAnyOrder("value"));
     }
@@ -87,7 +117,12 @@ public class ListVariablesTest {
      */
     @Test
     public void shouldListVariablesFunction8() {
-        final List<String> result = Collections.emptyList();
+        Function f1 = new Number(5.0);
+        Function f2 = new Variable("i");
+        Function f3 = new Subt(f1, f2);
+        Function f4 = new Number(8.0);
+        Function f5 = new Mul(f3, f4);
+        final List<String> result = f5.listVariables(List.of());
 
         assertThat(result, containsInAnyOrder("i"));
     }
